# blobserver

./: .gitignore  configure.ac
src/: Makefile.am  abstract-factory_spec.h  detector.h  main.cpp  source.h  source_openni.cpp  source_openni.h
